--- a/package.json
+++ b/package.json
@@ -1,37 +1,41 @@
 {
-  "name": "redux-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "redux-universal-example",
+  "version": "0.0.0",
+  "description": "An example of a universally-rendered Redux application",
   "scripts": {
-    "start": "node server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/namho102/redux-server.git"
+    "url": "git+https://github.com/reactjs/redux.git"
   },
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/namho102/redux-server/issues"
+    "url": "https://github.com/reactjs/redux/issues"
   },
-  "homepage": "https://github.com/namho102/redux-server#readme",
+  "homepage": "http://redux.js.org",
   "dependencies": {
-    "babel-register": "^6.7.2",
-    "express": "^4.13.4",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.1"
+    "babel-polyfill": "*",
+    "babel-register": "*",
+    "babel-runtime": "^6.6.1",
+    "express": "*",
+    "qs": "*",
+    "react": "*",
+    "react-dom": "*",
+    "react-redux": "*",
+    "redux": "*",
+    "redux-thunk": "*",
+    "serve-static": "*"
   },
   "devDependencies": {
-    "babel-core": "^6.7.6",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "webpack": "^1.13.0",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "babel-core": "^*",
+    "babel-loader": "*",
+    "babel-preset-es2015": "*",
+    "babel-preset-react": "*",
+    "babel-preset-react-hmre": "*",
+    "babel-runtime": "*",
+    "webpack": "*",
+    "webpack-dev-middleware": "*",
+    "webpack-hot-middleware": "*"
   }
 }
